Fix bug of alignment

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     border-bottom: 6px double black;
     width: 100%;
     background-color: aquamarine;
-    accent-color: ;
     border-top: 6px double black;    
     text-align: center;
 }
@@ -78,15 +77,15 @@ div.tafelImage{
 div.bag .box{
     background-color : black;
     padding : 10 20 0 10;
-    width : 1.5em;
+    width : 1.2em;
     height : 0.8em;
-    margin : 0.3em;
-    display : inline;
+    margin : 0 0.3em 0 0;
+    display : inline-block;
 }
 
-div.tafelImage .bag{
+div.tafel .bag{
     border-color : black;
-    padding : 8px;
+    display: flex;
 }
 
 table.tafel {
